feat: update y delete productos
